--- a/SeedHackApp/SeedHackApp.xcodeproj/xcshareddata/xcschemes/SeedHackApp (iOS).xcscheme
+++ b/SeedHackApp/SeedHackApp.xcodeproj/xcshareddata/xcschemes/SeedHackApp (iOS).xcscheme
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
    LastUpgradeVersion = "1300"
-   version = "1.3">
+   version = "1.7">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
@@ -97,6 +97,15 @@
             <ActionContent
                title = "Run Script"
                scriptText = "# Type a script or drag a script file from your workspace to insert its path.&#10;cd ${PROJECT_DIR}&#10;xcrun agvtool next-version -all&#10;">
+               <EnvironmentBuildable>
+                  <BuildableReference
+                     BuildableIdentifier = "primary"
+                     BlueprintIdentifier = "10D358B52716E6BB00D48B76"
+                     BuildableName = "Seed Hack.app"
+                     BlueprintName = "SeedHackApp (iOS)"
+                     ReferencedContainer = "container:SeedHackApp.xcodeproj">
+                  </BuildableReference>
+               </EnvironmentBuildable>
             </ActionContent>
          </ExecutionAction>
       </PreActions>
